<resources>
    <string name="app_name">Number Guessing Game</string>
    <string name="guess_the_number">Guess The Number</string>
    <string name="enter_the_number">Enter The Number</string>
    <string name="guess_the_number_from_0_to_1000">Guess The Number</string>
    <string name="validate">Validate</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="and_enjoy">And Enjoy</string>
    <string name="for_fun" />
    <string name="for_fun2">For Fun</string>
    <string name="e_mail">E-mail</string>
    <string name="check">Check</string>
</resources>