<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5ADD3C"
    tools:context=".SignUpActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/background_picture"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditText1"
        android:background="@drawable/rounded"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        android:hint="@string/enter_your_email"
        android:paddingStart="10dp"
        android:layout_width="350dp"
        android:layout_height="50dp"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEditText1"
        android:singleLine="true"
        android:background="@drawable/rounded"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText1"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/repeatPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:singleLine="true"
        android:paddingStart="10dp"
        android:background="@drawable/rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText1"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:hint="@string/repeat_password"
        android:layout_width="350dp"
        android:layout_height="50dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton1"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/buttomrounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatPasswordEditText"
        android:layout_marginTop="20dp"
        android:layout_width="120dp"
        android:layout_height="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>